[gd_scene load_steps=14 format=2]

[ext_resource path="res://world/background/set2_background.png" type="Texture" id=1]
[ext_resource path="res://world/background/set2_tiles.png" type="Texture" id=2]
[ext_resource path="res://world/background/set2_hills.png" type="Texture" id=3]
[ext_resource path="res://ScoreLabel.gd" type="Script" id=4]
[ext_resource path="res://world/tiles/Tileset.tres" type="TileSet" id=5]
[ext_resource path="res://world/Spawner.gd" type="Script" id=6]
[ext_resource path="res://world/Pit.gd" type="Script" id=7]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://enemies/Golem/golemSprites/normal/EnemyNormal.tscn" type="PackedScene" id=9]
[ext_resource path="res://enemies/Ghost/ghostSprites/normal/EnemyNormal.tscn" type="PackedScene" id=10]
[ext_resource path="res://enemies/Skull/skullSprites/normal/EnemyNormal.tscn" type="PackedScene" id=11]

[sub_resource type="GDScript" id=1]

script/source = "extends Node

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"

func _ready():
	# Called when the node is added to the scene for the first time.
	# Initialization here
	pass

#func _process(delta):
#	# Called every frame. Delta is time since last frame.
#	# Update game logic here.
#	pass
"

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 57.1172, 21.7004 )

[node name="Game" type="Node"]

script = SubResource( 1 )

[node name="Background" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="TextureRect" type="TextureRect" parent="Background" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 1 )
expand = true
stretch_mode = 0

[node name="TextureRect3" type="TextureRect" parent="Background" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="TextureRect2" type="TextureRect" parent="Background" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
expand = true
stretch_mode = 7

[node name="TextureRect4" type="TextureRect" parent="Background" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 600.0
margin_top = 12.0
margin_right = 681.0
margin_bottom = 50.0
rect_min_size = Vector2( 10, 10 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 0
script = ExtResource( 4 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="label" type="Label" parent="Background/TextureRect4" index="0"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -72.0
margin_top = 1.0
margin_right = -13.0
margin_bottom = 42.0
rect_min_size = Vector2( 41, 14 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Visibility" ]

[node name="TileMap" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 5 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -327672, 3, 0, -327669, 3, 0, -262136, 3, 0, -262133, 3, 0, -196600, 3, 0, -196597, 3, 0, -131064, 3, 0, -131061, 3, 0, -65528, 3, 0, -65525, 3, 0, 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 3, 0, 17, 3, 0, 18, 3, 0, 19, 3, 0, 65536, 3, 0, 65537, 3, 0, 65554, 3, 0, 65555, 3, 0, 131072, 3, 0, 131091, 3, 0, 196608, 3, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196627, 3, 0, 262144, 3, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262163, 3, 0, 327680, 3, 0, 327699, 3, 0, 393216, 3, 0, 393217, 1, 0, 393218, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 3, 0, 458752, 3, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458771, 3, 0, 524288, 3, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524307, 3, 0, 589824, 3, 0, 589843, 3, 0, 655360, 3, 0, 655361, 1, 0, 655362, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 3, 0, 720896, 3, 0, 720897, 3, 0, 720898, 3, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spawner" type="Node2D" parent="." index="2"]

position = Vector2( 642.718, -238.806 )
script = ExtResource( 6 )
START_DELAY = 3
START_MIN_WAIT_TIME = 3.5

[node name="Timer" type="Timer" parent="Spawner" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Pit" type="Area2D" parent="." index="3"]

position = Vector2( 640.148, 782.148 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pit" index="0"]

shape = SubResource( 2 )

[node name="Player" parent="." index="4" instance=ExtResource( 8 )]

position = Vector2( 642.19, -206.585 )

[node name="Golem" parent="." index="5" instance=ExtResource( 9 )]

[node name="Ghost" parent="." index="6" instance=ExtResource( 10 )]

[node name="Skull" parent="." index="7" instance=ExtResource( 11 )]

[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_Timer_timeout"]

[connection signal="ghost_fell" from="Pit" to="Spawner" method="_on_Pit_ghost_fell"]

[connection signal="golem_fell" from="Pit" to="Spawner" method="_on_Pit_golem_fell"]

[connection signal="skull_fell" from="Pit" to="Spawner" method="_on_Pit_skull_fell"]

[connection signal="golem_died" from="Golem" to="Background/TextureRect4" method="_on_Golem_golem_died"]

[connection signal="ghost_died" from="Ghost" to="Background/TextureRect4" method="_on_Ghost_ghost_died"]

[connection signal="skull_died" from="Skull" to="Background/TextureRect4" method="_on_Skull_skull_died"]


